		follows in expecting it as the save file suffix.
		Added [savefile] tag to save files.  The intended use is to 
		allow reconstruction of relative paths between dump and save 
		file.
		Fixed --autosavename to use .gtkw as a suffix rather than the
		.sav suffix.
		Reworked wave_info and wave_alert icons.  wave_info now
		matches gtkwave.icns.
		Renamed .sav examples to .gtkw.
		Added relative path comparisons for --save so when dumpfiles
		and savefiles move in tandem, a successful load can be 
		attempted.
		Added [dumpfile_mtime] and [dumpfile_size] tags to save file.
		Can now specify just an augmented save file at the command
		line and gtkwave will load both the dump file and the save file:
		this makes launching from desktops easier on Linux.
		Added mime types, desktops, and icons in share/ for gnome.
		Added percentage progress during load for most file types
		in window title bar when splash screen not active.
		Preliminary add of interfacing with GConf via the
		/com.geda.gtkwave directory for keys in GConf.
		Memory overrun fix to symbol.c for Bluespec add from 3.3.11.
		Added --restore command line option to gtkwave.
3.3.30 17jan12	Updated ./configure to add --disable-mime-update flag.
		Fix --optimize for --restore.
		Add [optimize_vcd] savefile tag.
		Disable analog during mutually incompatible mode selection
		(binary, filters, etc).
		Added F/P/T flags to mouseover for the filters.
		Fix problem where ungrab doesn't occur if button pressed + 
		simultaneous reload accelerator key occurs.
		Fix combine direction in transaction filter to down.
		Fix vector analog render/print routine to use skipcnt.
		Fixed transaction filter to cache hptr node if converted
		(i.e., do not place bitblasted in save file if avoidable).
		Fixed min/max of cached autoscaling sizing when number of
		extension traces changes.
3.3.31 24jan12	Added support for native file requesters in OSX Quartz.
		Clang warning fixes.
		Added missing config.guess and config.sub.